# deadbolt

./: .gitignore  CNAME  Cargo.toml  deadbolt.py  deadlock_sim.js  dli_heros.py  dli_items.py  hero.py  index.html  item.py  plt_test.py  read_data.py  simulator.py
assets/: trees.level.json
assets/data/processed/: heroes.json  item_bonuses.json  level_bonuses.json
data/processed/: items.json
info/heros/: deadlock_hero_info.json
info/items/: Spirit_item_info.json  Vitality_item_info.json  Weapons_item_info.json
info/items/item_pages/: Active_Reload.txt  Alchemical_Fire.txt  Ammo_Scavenger.txt  Basic_Magazine.txt  Berserker.txt  Boundless_Spirit.txt  Bullet_Armor.txt  Bullet_Lifesteal.txt  Bullet_Resist_Shredder.txt  Burst_Fire.txt  Close_Quarters.txt  Cold_Front.txt  Colossus.txt  Combat_Barrier.txt  Crippling_Headshot.txt  Curse.txt  Debuff_Reducer.txt  Debuff_Remover.txt  Decay.txt  Divine_Barrier.txt  Diviners_Kevlar.txt  Duration_Extender.txt  Echo_Shard.txt  Enchanters_Barrier.txt  Enduring_Speed.txt  Enduring_Spirit.txt  Escalating_Exposure.txt  Escalating_Resilience.txt  Ethereal_Shift.txt  Extra_Charge.txt  Extra_Health.txt  Extra_Regen.txt  Extra_Spirit.txt  Extra_Stamina.txt  Fleetfoot.txt  Fortitude.txt  Frenzy.txt  Glass_Cannon.txt  Headhunter.txt  Headshot_Booster.txt  (+77 more)
src/: main.rs
