[package]
name = "deadlock_sim"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy="0.15"
bevy_common_assets={ version="*", features=['json']}
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
serde = "1.0.218"
serde_json = "1.0.139"

[build]
rustflags = ["-Z", "threads=8"]


[profile.dev.build-override]
opt-level = 3

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
